--- a/minimax/package.json
+++ b/minimax/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/lodash": "^4.14.188",
     "@types/node": "^18.11.9",
     "tslib": "^2.4.1",
     "typescript": "^4.8.4"
