--- a/minimax/package.json
+++ b/minimax/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "compile": "tsc minimaxTest.ts",
+    "compile": "tsc ./public/minimaxTest.ts",
+    "compileMain": "tsc ./public/main.ts",
     "start": "npm run compile && node main.js",
     "test": "npm run compile && node minimaxTest.js"
   },
@@ -16,5 +17,8 @@
     "@types/node": "^18.11.9",
     "tslib": "^2.4.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
